--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>GeneXusSecurityAPI</groupId>
-	<artifactId>parent</artifactId>
+	<groupId>com.genexus</groupId>
+	<artifactId>SecurityAPIParent</artifactId>
 	<version>1.0.0.0</version>
 	<packaging>pom</packaging>
 
@@ -104,7 +104,7 @@
 	</build>
 
 	<organization>
-		<name>GeneXus SA</name>
+		<name>GeneXus</name>
 		<url>https://www.genexus.com/</url>
 	</organization>
 </project>
