--- a/GeneXusCryptography/pom.xml
+++ b/GeneXusCryptography/pom.xml
@@ -22,17 +22,15 @@
 
 
 	<dependencies>
-		<!-- https://mvnrepository.com/artifact/org.bouncycastle/bcpkix-jdk15on -->
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
-			<artifactId>bcpkix-jdk15on</artifactId>
-			<version>1.69</version>
+			<artifactId>bcpkix-jdk18on</artifactId>
+			<version>${org.bouncycastle.version}</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on -->
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
-			<artifactId>bcprov-jdk15on</artifactId>
-			<version>1.69</version>
+			<artifactId>bcprov-jdk18on</artifactId>
+			<version>${org.bouncycastle.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.genexus</groupId>
