--- a/GeneXusCryptography/pom.xml
+++ b/GeneXusCryptography/pom.xml
@@ -7,7 +7,8 @@
 	<parent>
 		<groupId>com.genexus</groupId>
 		<artifactId>SecurityAPIParent</artifactId>
-		<version>18.5.0</version>
+		<version>18.7.0</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 
