--- a/GeneXusXmlSignature/pom.xml
+++ b/GeneXusXmlSignature/pom.xml
@@ -7,7 +7,8 @@
 	<parent>
 		<groupId>com.genexus</groupId>
 		<artifactId>SecurityAPIParent</artifactId>
-		<version>18.5.0</version>
+		<version>18.7.0</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>GeneXusXmlSignature</artifactId>
@@ -25,7 +26,7 @@
 		<dependency>
 			<groupId>org.apache.santuario</groupId>
 			<artifactId>xmlsec</artifactId>
-			<version>2.2.3</version>
+			<version>3.0.3</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.bouncycastle/bcpkix-jdk15on -->
 		<dependency>
